--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="block">
 
                 <div class="col-xs-12 box photo-box ">
-                    <img src="../Image/if_user_925901.svg" />
+                    <img src="Image/user.svg" />
                 </div>
 
                 <div class="col-xs-12 box information-box ">
