--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             .box-title > .fa {
                 color: #fff;
-                background-color: #555;
+                background-color: #247BA0;
                 padding: 5px;
                 margin-right: 10px;
                 box-shadow: 2px 2.5px 2.5px rgba(155,155,155,.6);
@@ -70,7 +70,7 @@
             <div class="block">
 
                 <div class="col-xs-12 box photo-box ">
-                    <img src="Image/user.svg" />
+                    <img src="../Image/if_user_925901.svg" />
                 </div>
 
                 <div class="col-xs-12 box information-box ">
