--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/font-awesome.min.css" rel="stylesheet" />
     <link href="css/owl.carousel.min.css" rel="stylesheet" />
     <link href="css/animate.css" rel="stylesheet" />
-    <link href="css/Infomation.css?ssssss" rel="stylesheet" />
+    <link href="css/Infomation.css?sssssss" rel="stylesheet" />
     <link href="css/JHmodal.css" rel="stylesheet" />
 
     <style>
