2017/10/31 作品集修改

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <link href="css/owl.carousel.min.css" rel="stylesheet" />
     <link href="css/animate.css" rel="stylesheet" />
     <style>
+
+  
     </style>
+
 </head>
+
 
 <body>
 
@@ -285,25 +289,18 @@
             </div>
 
         
-
-
-
-
-        </div>
-        <hr style="clear:both"/>
-        <div class="col-sm-12">
             <div class="block">
                 <div class="col-xs-12 box portfolio-box">
                     <div class="box-title lg"><i class="fa fa-briefcase "></i>作品集</div>
 
-                    <div class="col-sm-4">
+                    <div class="col-sm-6">
                         <div class="portfolio-card  ">
                             <div class="card-tag">
-                                <span class="tag" style="background-color:red;color:#fff">
-                                    C#
+                                <span class="tag" style="background-color:#555;color:#fff">
+                                    Asp.Net MVC
                                 </span>
-                                <span class="tag" style="background-color:orange;color:#fff">JAVA</span>
-
+                                <span class="tag" style="background-color:rgb(4, 62, 155);color:#fff">IOS</span>
+                                <span class="tag" style="background-color:rgb(2, 140, 147);color:#fff">Android</span>
                             </div>
 
                             <div class="card-img" style="background-image: url('https://i.ytimg.com/vi_webp/rprjmUK82f4/maxresdefault.webp');"></div>
@@ -314,88 +311,32 @@
                                 </div>
 
                                 <div class="content">
-                                    88期第一組-專題大作
+                                    88期第一組-專題
                                 </div>
 
                             </div>
 
                             <div class="modal-group" style="display:none">
                                 <div class=" JHmodal-open" data-modal-target="JHmodal1">
-                                    <iframe width="854" height="480" src="https://www.youtube.com/embed/rprjmUK82f4" frameborder="0" allowfullscreen></iframe>
+                                    <iframe  class="portfolio-youtubevideo" src="https://www.youtube.com/embed/rprjmUK82f4" frameborder="0" allowfullscreen></iframe>
                                 </div>
 
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-sm-4">
-                        <div class="portfolio-card  ">
-                            <div class="card-tag">
-                                <span class="tag" style="background-color:red;color:#fff">
-                                    C#
-                                </span>
-                                <span class="tag" style="background-color:orange;color:#fff">JAVA</span>
 
-                            </div>
 
-                            <div class="card-img" style="background-image: url('https://i.ytimg.com/vi_webp/rprjmUK82f4/maxresdefault.webp');"></div>
 
-                            <div class="card-introduction">
-                                <div class="title">
-                                    <label>資策會期末專題-電子商務網站</label>
-                                </div>
-
-                                <div class="content">
-                                    88期第一組-專題大作
-                                </div>
-
-                            </div>
-
-                            <div class="modal-group" style="display:none">
-                                <div class=" JHmodal-open" data-modal-target="JHmodal1">
-                                    <iframe width="854" height="480" src="https://www.youtube.com/embed/rprjmUK82f4" frameborder="0" allowfullscreen></iframe>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-4">
-                        <div class="portfolio-card  ">
-                            <div class="card-tag">
-                                <span class="tag" style="background-color:red;color:#fff">
-                                    C#
-                                </span>
-                                <span class="tag" style="background-color:orange;color:#fff">JAVA</span>
-
-                            </div>
-
-                            <div class="card-img" style="background-image: url('https://i.ytimg.com/vi_webp/rprjmUK82f4/maxresdefault.webp');"></div>
-
-                            <div class="card-introduction">
-                                <div class="title">
-                                    <label>資策會期末專題-電子商務網站</label>
-                                </div>
-
-                                <div class="content">
-                                    88期第一組-專題大作
-                                </div>
-
-                            </div>
-
-                            <div class="modal-group" style="display:none">
-                                <div class=" JHmodal-open" data-modal-target="JHmodal1">
-                                    <iframe width="854" height="480" src="https://www.youtube.com/embed/rprjmUK82f4" frameborder="0" allowfullscreen></iframe>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
 
                 </div>
             </div>
 
+
+
         </div>
+    
+   
     </div>
 
     <footer class="footer">
