--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link href="css/owl.carousel.min.css" rel="stylesheet" />
     <link href="css/animate.css" rel="stylesheet" />
     <style>
-
     </style>
 
 </head>
@@ -274,14 +273,17 @@
                     <div class="box-title lg"><i class="fa fa-user-circle-o "></i>關於我</div>
                     <section class="content">
                         <p>
-                            您好，我是陳佳鴻，一位程式設計師，屏東人。
+                            您好，我是陳佳鴻，一位程式設計師，屏東人。<br />
+                            主要專業為ASP.NET MVC的網站設計，熟悉使用C#進行Sever端的操作以及HTML5、Javascript等相關前端頁面的設計。
+                        </p>
+
                         <p>
                             我在2014年6月畢業於東海大學資訊管理學系。<br />
                             在大三下學期與大四上學期擔任專題組長，專題題目為開發"整合股票與基金的APP"而我扮演的角色是使用Java寫出網路爬蟲程式，抓取股票與基金資料並整合之後，交給其他人存取。
 
                         </p>
                         <p>
-                            在2015年退伍後，查覺到自己自學的極限，於是報名南區資策會的課程，在資策會中，學習了長達半年的相關知識，在資策會中我不僅更強化了C#與Java的技術，也對於OOP的概念有了更進一步的認識，並且學到了網頁開發、行動開發、資料庫等相關技術，並且透過實務專題製作，將所學實際應用。期末專題替合作的公司製作一個電子商務網站，以及其相關的手機APP，而我在其中扮演的角色為整合整個網站，並適當的支援其他組員與Android的部分應用  程式撰寫。
+                            在2015年退伍後，查覺到自己自學的極限，於是報名南區資策會的課程，學習了長達半年的相關知識，我不僅更強化了C#與Java的技術，也對於OOP的概念有了更進一步的認識，並且學到了網頁開發、行動開發、資料庫等相關技術，並且透過實務專題製作，將所學實際應用。期末專題替合作的公司製作一個電子商務網站，以及其相關的手機APP，而我在其中扮演的角色為整合整個網站，並適當的支援其他組員與Android的部分應用  程式撰寫。
 
                         </p>
                         <p>
@@ -392,7 +394,7 @@
     <script src="scripts/owl.carousel.min.js"></script>
     <script src="dist/main_bundle.js"></script>
     <script>
- 
+
     </script>
 
 </body>
