--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <link href="css/font-awesome.min.css" rel="stylesheet" />
     <link href="css/owl.carousel.min.css" rel="stylesheet" />
     <link href="css/animate.css" rel="stylesheet" />
-    <style>
-    </style>
-
+ 
 </head>
 
 
@@ -387,7 +385,9 @@
         </div>
 
     </footer>
+    <span class="btnBackToTop fa fa-chevron-circle-up">
 
+    </span>
 
     <script src="scripts/jquery-1.10.2.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
